--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "psychology-website",
   "version": "0.1.0",
-  "proxy": "https://psyhology-website-be.onrender.com",
+  "proxy": "http://localhost:8080",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.0",
