--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "dotenv": "^16.0.3",
+    "html-react-parser": "^3.0.4",
     "jwt-decode": "^3.1.2",
     "luxon": "^3.0.3",
+    "quill-delta-to-html": "^0.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^2.1.0",
+    "react-paginate": "^8.1.4",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
